Fix edge bbtests